:art: Fix console scrollbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,7 +75,7 @@ header {
   padding-left: 10px;
   margin-top: 0;
   height: 0;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: height .2s;
   transition: padding .2s;
   -webkit-app-region: no-drag;
@@ -90,6 +90,18 @@ header {
 .output p {
   margin-bottom: 0;
   white-space: pre;
+}
+
+.output::-webkit-scrollbar {
+  width: 14px;
+}
+
+.output::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, .2);
+}
+
+.output::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, .4);
 }
 
 .output .timestamp {
